--- a/app/package.json
+++ b/app/package.json
@@ -1,27 +1,24 @@
 {
     "name": "angularjs-template",
     "version": "0.0.4",
-    "description": "A starter project for AngularJS based on John Papa's style guide",
+    "description": "TechnipFMC - Field Service Order",
     "keywords": [
-        "AngularJS",
-        "angular",
+        "TechnipFMC",
+        "FSO",
         "template",
-        "angularjs-template",
-        "seed",
-        "johnpapa",
-        "styleguide",
-        "node",
-        "express"
+        "Field Service Order",
+        "Bases",
+        "Surface"
     ],
-    "homepage": "https://github.com/pamigomp/angularjs-template",
+    "homepage": "https://github.com/lopezfmr-dev/tfmc_fso",
     "bugs": {
-        "url": "https://github.com/pamigomp/angularjs-template/issues"
+        "url": "https://github.com/lopezfmr-dev/tfmc_fso/issues"
     },
     "license": "MIT",
-    "author": "Michal Pietrzak",
+    "author": "Miguel Lopez",
     "repository": {
         "type": "git",
-        "url": "https://github.com/pamigomp/angularjs-template.git"
+        "url": "https://github.com/lopezfmr-dev/tfmc_fso.git"
     },
     "main": "server.js",
     "scripts": {
